fixed up the API a bit and made meta data a map
